syntax ="proto3";

package numbers;

option  go_package = ".;numberspb";

message NumRequest {
   int32   Num1  =1;
   int32   Num2  =2;
}

message NumResponse {
   int32   Sum  =1;
}

message PrimeRequest{
	int32  Num =1;
}

message PrimeResponse{
	int32  Num =1;
}

message AverageRequest{
	int32  Num =1;
}

message AverageResponse{
	int32 Result =1;
}

message MaxRequest {
	repeated int32 Numbers = 1;
}

message MaxResponse{
	int32  Result  =1;
}

service SumService {
  // Unary API	
  rpc  numbers(NumRequest) returns (NumResponse){};
  
  //Server Streaming API
  rpc prime(PrimeRequest) returns (stream PrimeResponse){};
 
  //Client Streaming API
  rpc computeAverage(stream AverageRequest) returns (AverageResponse){};

  //BiDirectional Streaming API
  rpc maxNumber(stream MaxRequest) returns (stream MaxResponse);
}

